--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "dependencies": {
     "express": "^4.14.0",
     "multer": "^1.2.1",
-    "file-system": "^2.2.2"
+    "file-system": "^2.2.2",
+    "bcrypt": "^1.0.2",
+    "mysql": "^2.13.0",
+    "client-sessions": "0.8.0",
+    "body-parser": "^1.17.1"
   }
 }
