--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "axios": "^0.17.1",
     "express": "^4.16.2",
-    "fs": "0.0.1-security",
+    "fs-extra": "^4.0.2",
     "multer": "^1.3.0",
-    "react": "^16.1.1",
+    "path": "^0.12.7",
+    "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.1.1",
-    "react-scripts": "1.0.17",
+    "react-dom": "^16.2.0",
+    "react-scripts": "^1.0.17",
     "svg-jsx-loader": "0.0.17"
   },
   "scripts": {
